@@ -151,6 +151,7 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   items having annexes to print or not
 - Bugfix when sending an item to another MC, the 'time' of the event was the 'time' of the last event, if resulting item
   was deleted then item was sent again, it used wrong 'time', now it uses the correct current time
+- Use plone.api.env.adopt_user and plone.api.env.adopt_roles instead of getSecurityManager/setSecurityManager
 
 3.3 (2015-02-27)
 ----------------
